--- a/src/components/my-work/MyWork.css
+++ b/src/components/my-work/MyWork.css
@@ -257,16 +257,28 @@
 /* @media screen and (min-width: 1022px) and (min-height: 1365px) {
 } */
 
-/* For screen (width: 1280px and more, height: 800px (in mind)*/
-@media screen and (min-width: 1278px) and (min-height: 799px) {
+/* For screen (width: 1280px and more, height: 720px (in mind)*/
+@media screen and (min-width: 1278px) {
   .horiz-left {
     width: 26%;
+  }
+
+  .horiz-left .title {
+    margin-right: -5rem;
   }
 
   #my-work .work-space-pic {
     height: 44rem;
   }
 }
+
+/* For screen (width: 1280px and more, height: 800px (in mind)*/
+/* @media screen and (min-width: 1278px) and (min-height: 799px) {
+} */
+
+/* For screen (width: 1280px and more, height: 1024px*/
+/* @media screen and (min-width: 1278px) and (min-height: 1022px) {
+} */
 
 /* For screen (width: 1366px and more, height: 768px (in mind)*/
 @media screen and (min-width: 1364px) {
@@ -282,3 +294,54 @@
 /* For screen (width: 1366px and more, height: 1024px*/
 /* @media screen and (min-width: 1364px) and (min-height: 1022px) {
 } */
+
+/*---Desktop-Media-Querie-Rules--- */
+/* For screen (width: 1400px and more)*/
+@media screen and (min-width: 1399px) {
+  #my-work {
+    padding-bottom: 6rem;
+  }
+
+  #my-work .title {
+    margin-top: 6rem;
+  }
+}
+
+/* For screen (width: 1500px and more, height: 700px*/
+/* @media screen and (min-width: 1500px) and (min-height: 700px) {
+} */
+
+/* For screen (width: 1536px and more, height: 864px*/
+/* @media screen and (min-width: 1534px) and (min-height: 862px) {
+} */
+
+/* For screen (width: 1600px and more, height: 900px (in mind)*/
+@media screen and (min-width: 1598px) {
+  #my-work .horiz-left {
+    max-width: 34rem;
+  }
+}
+
+/* For screen (width: 1680px and more*/
+/* @media screen and (min-width: 1679px) {
+} */
+
+/* For screen (width: 1750px and more*/
+/* @media screen and (min-width: 1749px) {
+} */
+
+/* For screen (width: 1900px and more, height: 1080 (in-mind)*/
+@media screen and (min-width: 1900px) {
+  #my-work {
+    padding: 0 5%;
+    background: linear-gradient(
+      -20deg,
+      #fff 0,
+      #fff 40%,
+      #e2dfdf 40%,
+      #e2dfdf 58%,
+      #fff 58%,
+      #fff 100%
+    );
+  }
+}
