--- a/src/components/my-work/Project.css
+++ b/src/components/my-work/Project.css
@@ -31,8 +31,9 @@
 }
 
 .project a:hover {
+  padding-bottom: 0.1rem;
   font-weight: 500;
-  box-shadow: 8px 4px 4px gray;
+  border-bottom: 1px solid gray;
 }
 
 /* ----Mobile-Landscape---- */
@@ -84,5 +85,17 @@
 @media screen and (min-width: 1022px) {
   .project {
     font-size: 1.8rem;
+  }
+}
+
+/*---Desktop-Media-Querie-Rules--- */
+/* For screen (width: 1400px and more)*/
+@media screen and (min-width: 1399px) {
+  .project {
+    font-size: 2rem;
+  }
+
+  .project img {
+    height: 130px;
   }
 }
