Reduce footer content to only address related content + some media query styles ofTablet and Desktop screens

--- a/src/components/contact-me/ContactMe.css
+++ b/src/components/contact-me/ContactMe.css
@@ -49,6 +49,7 @@ input::-webkit-scrollbar-thumb:hover {
   min-height: 568px;
   max-height: 650px;
   padding-top: 8vh;
+  overflow: hidden;
 }
 
 #contact-me .title {
