--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -2,24 +2,12 @@
 #footer {
   background-color: #000;
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   width: 100vw;
   min-width: 300px;
-  height: 13rem;
-  padding: 1.8rem 0;
+  padding: 2.5rem 0;
   display: flex;
-  flex-direction: row-reverse;
   justify-content: space-around;
-}
-
-.footer-nav {
-  display: none;
-}
-
-.footer-links {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
 }
 
 #footer span {
@@ -33,7 +21,28 @@
 
 #footer a,
 #footer p {
-  margin: 0.3rem 0;
+  margin: 0.5rem 0;
   display: flex;
   align-items: center;
+}
+
+@media screen and (min-width: 600px) {
+  #footer {
+    font-size: 1.4rem;
+  }
+
+  .created-by {
+    display: flex;
+    gap: 3rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #footer {
+    font-size: 1.6rem;
+  }
+
+  .created-by {
+    gap: 10rem;
+  }
 }
