--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -3,7 +3,7 @@
 #about-me {
   position: relative;
   width: 100vw;
-  height: 59rem;
+  height: 62rem;
   min-width: 300px;
   overflow: hidden;
   padding-top: 8%;
@@ -18,7 +18,7 @@
 
 .about-me__contents-ctr {
   width: 30rem;
-  height: 80%;
+  height: 79%;
   position: relative;
 }
 
@@ -26,7 +26,7 @@
 .about-me__bio,
 .about-me__bio article {
   width: 100%;
-  min-height: 33rem;
+  min-height: 35rem;
   padding: 1rem;
   position: absolute;
   top: 0;
@@ -121,7 +121,7 @@
 } */
 
 /* For screen (width: 414px and more, height: 736px (in mind)*/
-@media screen and (min-width: 412px) {
+@media screen and (min-width: 414px) {
   .about-me__title {
     margin-left: 8%;
   }
@@ -131,11 +131,17 @@
   }
 
   .about-me__bio {
-    font-size: 1.65rem;
+    font-size: 1.75rem;
   }
 
   .about-me__extra-info {
     left: 5%;
+    bottom: 0;
+  }
+
+  .about-me__languages h4,
+  .about-me__tools h4 {
+    font-size: 1.5rem;
   }
 }
 
@@ -147,7 +153,7 @@
 /* Styles for mobiles in landscape mode that has min-height of 300px*/
 @media screen and (min-height: 300px) and (min-width: 568px) {
   #about-me {
-    height: 620px;
+    height: 65rem;
   }
 
   .about-me__title {
@@ -174,7 +180,7 @@
 
   .about-me__languages h4,
   .about-me__tools h4 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
   }
 
   .about-me__languages span,
@@ -188,11 +194,11 @@
 @media screen and (min-height: 360px) and (min-width: 640px) {
   .about-me__title {
     margin-top: 3rem;
-    margin-left: 10%;
+    margin-left: 8%;
   }
 
   .about-me__contents-ctr {
-    width: 48rem;
+    width: 52rem;
     left: 12%;
   }
 
@@ -201,11 +207,16 @@
   }
 
   .about-me__bio {
-    font-size: 1.9rem;
+    font-size: 2rem;
   }
 
   .about-me__extra-info {
     bottom: 1%;
+  }
+
+  .about-me__languages span,
+  .about-me__tools span {
+    margin: 0 1.5rem;
   }
 }
 
@@ -228,6 +239,10 @@
 /*---Tablet-Media-Querie-Rules--- */
 /* For screen (width: 600px and more, height: 800px (in mind)*/
 @media screen and (min-width: 599px) and (min-height: 799px) {
+  .about-me__contents-ctr {
+    width: 46rem;
+  }
+
   .about-me__bio {
     font-size: 1.9rem;
   }
@@ -248,7 +263,7 @@
 } */
 
 /* For screen (width: 768px and more, height: 1024px (in mind)*/
-@media screen and (min-width: 766px) {
+@media screen and (min-width: 768px) {
   #about-me {
     height: 66rem;
   }
@@ -258,7 +273,13 @@
   }
 
   .about-me__contents-ctr {
-    width: 58rem;
+    width: 56rem;
+  }
+
+  .about-me__bio-bg,
+  .about-me__bio,
+  .about-me__bio article {
+    min-height: 33rem;
   }
 
   .about-me__bio {
@@ -281,9 +302,9 @@
 }
 
 /* For screen (width: 800px and more, height: 600px (in mind)*/
-@media screen and (min-width: 798px) {
+@media screen and (min-width: 800px) {
   .about-me__title {
-    margin-left: 4rem;
+    margin-left: 4.2rem;
     margin-bottom: 3rem;
   }
 
@@ -313,7 +334,7 @@
 
   .about-me__horiz-bg {
     display: block;
-    width: 38%;
+    width: 39%;
     height: 110%;
     position: absolute;
     bottom: -9%;
@@ -357,7 +378,7 @@
   }
 
   .about-me__contents-ctr {
-    left: 8%;
+    left: 6%;
   }
 
   .about-me__horiz-bg {
@@ -414,11 +435,12 @@
   }
 
   .about-me__contents-ctr {
-    left: 16%;
+    left: 14%;
   }
 
   .about-me__extra-info {
     bottom: -6%;
+    left: 6%;
   }
 
   .about-me__horiz-bg {
@@ -484,11 +506,11 @@
   .about-me__title {
     font-size: 2.8rem;
     margin-top: -3%;
-    margin-left: 24%;
+    margin-left: 20%;
   }
 
   .about-me__contents-ctr {
-    left: 26%;
+    left: 24%;
   }
 
   .about-me__bio-bg,
@@ -517,6 +539,6 @@
 
   .about-me__horiz-bg {
     width: 35%;
-    right: 12%;
+    right: 14%;
   }
 }
