Adding Detail Modal to each project in my work section

--- a/src/components/contact-me/ContactMe.css
+++ b/src/components/contact-me/ContactMe.css
@@ -133,7 +133,7 @@ form button {
   position: absolute;
   bottom: 4%;
   right: 12%;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 
 form button:hover {
@@ -185,7 +185,7 @@ form button:hover {
   padding-top: 30vh;
 }
 
-.userRespond .closeIcon {
+.userRespond .close-icon {
   position: absolute;
   top: 4%;
   right: 8%;
@@ -602,7 +602,7 @@ form button:hover {
     height: 96%;
   }
 
-  .userRespond .closeIcon {
+  .userRespond .close-icon {
     top: 12%;
   }
 }
