--- a/src/components/my-work/Project.css
+++ b/src/components/my-work/Project.css
@@ -1,39 +1,60 @@
 /* ----Mobile-First---- */
 /* Starting from the smallest, iphone 5/SE size: 320x568*/
 .project {
+  font-size: 1.7rem;
   width: 75%;
   max-width: 200px;
   margin: auto;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.8rem;
   text-align: center;
-}
-
-.project figure {
-  background-color: #e2dfdf;
-  margin-bottom: 1.2rem;
-}
-
-.project figcaption {
-  padding: 0.2rem 0;
-  border-bottom: 0.5px solid rgb(147, 145, 145);
-  font-weight: 100;
 }
 
 .project img {
   width: 100%;
   height: 100px;
+  margin: 1rem 0;
+}
+
+.project img:hover {
+  border-radius: 8px;
+  border: 2px solid black;
 }
 
 .project a {
-  font-weight: 100;
   color: #000;
   text-decoration: none;
 }
 
 .project a:hover {
-  padding-bottom: 0.1rem;
-  font-weight: 500;
-  border-bottom: 1px solid gray;
+  font-weight: 600;
+}
+
+.project button {
+  padding: 0.2rem 1.8rem;
+  font-size: 1.4rem;
+  background-color: #161414;
+  color: #fff;
+  border-radius: 6px;
+}
+
+.project button:hover {
+  background-color: rgb(253, 250, 250);
+  color: #000;
+  font-weight: 600;
+}
+
+/* Style for the modal background */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
 
 /* ----Mobile-Landscape---- */
@@ -47,6 +68,10 @@
   .project img {
     height: 130px;
   }
+
+  .project button {
+    font-size: 1.6rem;
+  }
 }
 
 /*---Tablet-Media-Querie-Rules--- */
@@ -54,19 +79,23 @@
 @media screen and (min-width: 599px) and (min-height: 799px) {
   .project {
     max-width: 240px;
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
 
   .project img {
     height: 120px;
+  }
+
+  .project button {
+    padding: 0.2rem 2rem;
+    font-size: 1.6rem;
   }
 }
 
 /* For screen (width: 768px and more, height: 1024px (in mind)*/
 @media screen and (min-width: 766px) {
   .project {
-    width: 85%;
-    font-size: 1.7rem;
+    width: 88%;
   }
 }
 
@@ -74,25 +103,6 @@
 @media screen and (min-width: 798px) {
   .project {
     width: 90%;
-  }
-
-  .project img {
-    height: 120px;
-  }
-}
-
-/* For screen (width: 1024px and more, height: 768px (in mind) */
-@media screen and (min-width: 1022px) {
-  .project {
-    font-size: 1.8rem;
-  }
-}
-
-/*---Desktop-Media-Querie-Rules--- */
-/* For screen (width: 1400px and more)*/
-@media screen and (min-width: 1399px) {
-  .project {
-    font-size: 2rem;
   }
 
   .project img {
