Creating backdrop and backdrop portal and fixing the previous error by moving closeDetailHandler from modal to backdrop

--- a/src/components/my-work/Detail.css
+++ b/src/components/my-work/Detail.css
@@ -2,11 +2,11 @@
 .project-detail {
   position: relative;
   width: 100%;
-  max-width: 500px;
   padding: 25px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 999;
 }
 
 hr {
