--- a/src/components/my-work/Project.css
+++ b/src/components/my-work/Project.css
@@ -46,15 +46,15 @@
 /* Style for the modal background */
 .modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  inset: 0;
+  margin: auto;
+  max-width: 500px;
+  max-height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  margin: auto;
+  z-index: 200;
 }
 
 /* ----Mobile-Landscape---- */
