--- a/src/components/contact-me/ContactMe.css
+++ b/src/components/contact-me/ContactMe.css
@@ -123,24 +123,26 @@ form textarea {
   background-size: 100% 3ch;
 }
 
-form button {
+form .button {
   font-size: 1.4rem;
-  font-weight: 100;
   color: #fff;
-  padding: 0.2rem 1.8rem;
   background-color: transparent;
-  border: 1px solid rgb(197, 193, 193);
   position: absolute;
-  bottom: 4%;
+  bottom: 5%;
   right: 12%;
-  border-radius: 6px;
+  border: none;
+}
+form .button:hover {
+  color: #fff;
 }
 
-form button:hover {
-  background-color: rgb(234, 232, 232);
-  font-weight: 600;
-  color: #000;
-  border: 1px solid #000;
+form .button:before {
+  border-top: 2px solid #fff;
+  border-left: 2px solid #fff;
+}
+form .button:after {
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
 }
 
 .cm-vert-btm {
@@ -163,6 +165,8 @@ form button:hover {
   color: #000;
   padding: 0.4rem 0;
   text-align: left;
+  display: flex;
+  align-items: center;
 }
 
 .cm-vert-btm a:hover {
