--- a/src/components/my-work/components/Projects.css
+++ b/src/components/my-work/components/Projects.css
@@ -20,20 +20,22 @@
 
 #my-work .vert-down {
   width: 80%;
-  height: 60%;
+  height: 62%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.projects {
+ul.projects {
   width: 100%;
   height: 70%;
+  min-height: 170px;
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  list-style: none;
 }
 
 .vert-down .scroll-down {
@@ -98,11 +100,12 @@
 /* For screen (width: 600px and more, height: 800px (in mind)*/
 @media screen and (min-width: 599px) and (min-height: 799px) {
   #my-work .vert-down {
-    height: 50%;
+    height: 48%;
   }
 
   .projects {
     height: 65%;
+    min-height: 250px;
   }
 
   .vert-down .scroll-down {
@@ -113,11 +116,11 @@
 /* For screen (width: 768px and more, height: 1024px (in mind)*/
 @media screen and (min-width: 766px) {
   #my-work .horiz-right {
-    margin-top: 18%;
+    margin-top: 16%;
     height: 75%;
   }
 
-  .projects {
+  ul.projects {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     height: 90%;
@@ -147,7 +150,7 @@
     width: 70%;
   }
 
-  .projects {
+  ul.projects {
     grid-template-columns: repeat(3, 1fr);
   }
 }
