--- a/src/components/my-work/MyWork.css
+++ b/src/components/my-work/MyWork.css
@@ -8,7 +8,7 @@
   min-height: 568px;
   max-height: 650px;
   overflow: hidden;
-  padding-top: 8vh;
+  padding-top: 8%;
   display: flex;
   flex-direction: column;
   align-items: center;
